<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutFragment"
        android:title="About" />
    <item
        android:id="@+id/penthouseFragment"
        android:title="Penthouse" />
</menu>