...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/myNavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:defaultNavHost="true"
                app:navGraph="@navigation/navigation" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
